--- a/docs/main.tex
+++ b/docs/main.tex
@@ -8,4 +8,11 @@
 \title{Thorium specifications}
 \author{post-rex, MrTroble}
 \maketitle
+\newpage
+\section{Summay}
+\include{summary}
+\section{License}
+\include{license}
+\section{Key exchange}
+\include{keyexchange}
 \end{document}
