--- a/docs/license.tex
+++ b/docs/license.tex
@@ -1,4 +1,4 @@
-\section{License}
+\section*{License}
 These documents are subject to the terms of the Mozilla Public
 License, v. 2.0, by the thorium team. If a copy of the MPL was not distributed with this
 file, You can obtain one at http://mozilla.org/MPL/2.0/.
