--- a/docs/main.tex
+++ b/docs/main.tex
@@ -9,7 +9,8 @@
 \author{post-rex, MrTroble}
 \maketitle
 \newpage
+\tableofcontents
 \include{summary}
 \include{license}
-\include{keyexchange}
+\include{security}
 \end{document}
