--- a/docs/summary.tex
+++ b/docs/summary.tex
@@ -1,1 +1,4 @@
-\section{Summay}
+\section*{Summay}
+
+The thorium protocol is a server less chat protocol dedicated to security and privacy.
+this system uses a node system, where every client is a node in the chat network. It uses layered encryption which is send between nodes which are decrypting each layer and sending it of to the next node state in the decrypted message.
