--- a/docs/protocol.tex
+++ b/docs/protocol.tex
@@ -24,3 +24,4 @@ TNCP must implement a form of congestion control to prevent congestion of singel
 		\end{tabular}
 	\end{center}
 \end{table}
+\subsubsection{Key exchange}
