--- a/docs/security.tex
+++ b/docs/security.tex
@@ -1,3 +1,3 @@
 \section{Security}
 \subsection{Encryption}
-\subsubsection{Key exchange}
+All messages are encrypted with an ECC (Elliptic curve cryptography) key as defined by RFC 5915. See \url{https://tools.ietf.org/html/rfc5915}. This will be a standard public-private key encryption. This encryption is standardized and documented by the IETF (Internet Engineering Task Force) in RFC 5958. See: \url{https://tools.ietf.org/html/rfc5958}.
